fix: add consclussion

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1281,7 +1281,10 @@
    },
    "source": [
     "- Conclution pertanyaan 1\n",
-    "- Conclution pertanyaan 2"
+    "Penggunaan sepeda sangat dipengaruhi oleh faktor cuaca dan waktu. Pada musim panas, jumlah pengguna sepeda mencapai puncaknya karena kondisi cuaca yang lebih mendukung, sedangkan pada musim dingin, penggunaan sepeda menurun drastis akibat cuaca yang kurang bersahabat.\n",
+    "\n",
+    "- Conclution pertanyaan 2\n",
+    "Dari segi pola waktu, pengguna registered lebih aktif pada jam kerja, dengan lonjakan pada pagi hari (07:00 - 08:59) dan sore hari (jam pulang kerja). Sementara itu, pengguna casual lebih banyak bersepeda pada siang hari (13:00 - 14:59), kemungkinan besar untuk rekreasi atau aktivitas santai. Secara keseluruhan, pengguna registered lebih dominan dalam penggunaan sepeda di setiap jam dalam sehari."
    ]
   }
  ],
